# Documents_Parser

./: .gitignore  Makefile  README.md  pyproject.toml
data/: readme.md
data/Альбомы форм/М-11/: Альбом форм ПУД (часть 02) Инструкция М-11.doc  М-11_пример.doc  М-11_пронумерованный.doc
data/Альбомы форм/ФМУ-76/: .~lock.Альбом форм ПУД (часть 02) Инструкция ФМУ-76.doc#  Альбом форм ПУД (часть 02) Инструкция ФМУ-76.doc  ФМУ-76_пронумерованный.xls
documents_parser/: main.py
documents_parser/parser/: ocr_fmu76_scripts.py  ocr_m11_scripts.py  ocr_scripts.py  table_parser.py
documents_parser/ui/: main.py  validator.py
documents_parser/ui/src/: gif_creator.py  report.csv
documents_parser/utils/: extraction.py  table_cutout_for_m.py
tests/: test_documents_parser.py
